# congested-testnet

./: .envrc  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  flake.nix  runnet.sh  start.sh
cardano-cli-remote/: Cargo.toml
cardano-cli-remote/src/: main.rs
cluster/: Dockerfile  ada-transfer-from-genesis-to-wallet0.sh  default.nix  docker-compose-2.yaml  docker-compose.yaml  first-transaction.nix  node-spo1.yaml  runnet.nix  runnet.sh
cluster/docker/: .env  docker-compose.yaml  kupo.yaml  nodes-relay.yaml  nodes-spo.yaml  ogmios.yaml  prometheus.yaml  spammer-db.yaml
config/: configuration.yaml  default.nix  init-db.sql  mkfiles.sh  prometheus.yml  topology-passive-3.json  topology-relay-1.json  topology-relay-2.json  topology-spo-1.json  topology-spo-2.json
containers/: docker-compose.yaml
docs/: congestion-statistics.md  design.md
docs/imgs/: design.dia
examples/: example.js  example2.js  get-ada-submit-tx.js  get-tada.nix
examples/js-example/: get-ada-submit-tx.js  log-mempool.js  package-lock.json  package.json
examples/purescript-example/: Example.purs  package-lock.json  package.json  packages.dhall  spago.dhall
nix/: cardano-node.nix  config.nix  default.nix  docker.nix  generate-scripts.nix  generate_scripts.py  nixos-module.nix  ogmios-kupo.nix  overlays.nix  research.nix  services.nix  shell.nix  spammer.nix  tests.nix
nix/cardano/: aiken.nix  default.nix  (+5 more)
nix/cardano-cli-remote/: default.nix
research/: blocks-analysis.ipynb  congestion-periods.md  db-connection.ipynb  default.nix  runssh.sh  statistics.ipynb
scripts/: byron.genesis.spec.json  configuration.yaml  copy_share_config.sh  create_additional_utxo.sh  gen_staking_conf.sh  gen_testnet_conf.sh  pay_to_wallet.sh  post_run_cardano_node.sh  post_run_genesis_node.sh  run_genesis_spo.sh  run_kupo.sh  run_ogmios.sh  run_prometheus.sh  run_relay_node.sh  run_spo.sh  run_stacking_node.sh  topology_genesis_spo.json  upload_docker_containers.sh
spamer/onchain/: cabal.project  flake.nix  onchain.cabal
spamer/onchain/exporter/: Main.hs
spamer/onchain/nix/: outputs.nix  project.nix  shell.nix
spamer/onchain/src/: AlwaysTrueScript.hs
spammer/onchain/: cabal.project  flake.nix  onchain.cabal
spammer/onchain/exporter/: Main.hs
spammer/onchain/nix/: outputs.nix
spammer/onchain/src/: AlwaysTrueScript.hs
test/: ada-transfer-from-genesis-to-wallet0.sh  ada-transfer-from-genesis.sh  ada-transfer-from-wallet0-wallet0.sh  check-balance.sh  check-ogmios.sh  check-testnet.sh  default.nix  lock-unlock.nix  temp.sh
testnet-conf/: byron.genesis.spec.json  genesis.json  genesis.spec.json  prometheus.yml  topology-relay-1.json  topology-spo-1.json
tests/: tests.bats
(+181 files in other folders)
