cabal-version: 3.0 
name: onchain 
version: 0.0.0.1
license-file: LICENSE
copyright: TO DO 
author:  TO DO
maintainer: TO DO
bug-reports: TO DO 
stability: stable
homepage: TO DO 
synopsis: Onchain 
category: Console, Text
build-type: Simple

Description:
  Onchain part of spammer


flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)

-- common ghc-version-support
--   -- See the section on GHC versions in CONTRIBUTING
--   if impl(ghc <9.2)
--     buildable: False


library
  import:          lang
  exposed-modules:
    AlwaysTrueScript

  build-depends:
     base
      , bytestring
      , base16-bytestring
      , plutus-core
      , plutus-ledger-api
      , plutus-tx
      , plutus-tx-plugin   

  hs-source-dirs:  src

executable get-script 
  import:         lang
  main-is:        Main.hs
  build-depends:
     base
      , onchain
      , bytestring
      , base16-bytestring
      , plutus-ledger-api
      , cardano-api
      , serialise


  hs-source-dirs: exporter 


